# ska

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/include/: application.h
src/application/src/: application.cpp
src/core/: CMakeLists.txt
src/core/include/: FileSystemTraversalService.h  FileSystemTraversalServiceMock.h  core.h
src/core/src/: core.cpp
src/core/test/: FileSystemTraversalServiceTest.cpp
src/main/: CMakeLists.txt  main.cpp
src/main/include/: main.h
src/main/src/: main.cpp
src/main/test/: main_test.cpp
